alignment bugs solved

--- a/css/home.css
+++ b/css/home.css
@@ -21,10 +21,12 @@ body {
 .header {
     display: flex;
     flex-direction: row;
-    background-color: #f5f5f5;
     justify-content: space-around;
     align-items: center; 
-    position: relative;
+    margin: auto;
+    height: 80px;
+    min-width: 1024px;
+    max-width: 1024px;
 }
 .links a{
     text-decoration: none;
@@ -34,26 +36,22 @@ body {
 	color: #333333;
 	font-family: Asap-Bold;
 	font-size: 18pt;
-    position: absolute;
-    left: 3%;
-    top: 20%;
+    margin-right: 10px; 
 }
 .about {
 	color: #999999;
 	font-family: Asap-Bold;
 	font-size: 18pt;
-    position: absolute;
-    left: 10%;
-    top: 20%;
 }
 .upcomer-logo {
 
 }
-.fb-icon{
-    margin-top:5px; 
+.fb-icon {
+    margin-right: 10px;
+    cursor: pointer;
 }
 .tweet-icon{
-    margin-top:5px;    
+     cursor: pointer;
 }
 
 
@@ -81,6 +79,7 @@ body {
    
     color: #ffffff;
     position: relative;
+    margin-right: 85px;
 }
 .email {
     opacity: .3;
@@ -93,7 +92,7 @@ body {
     font-color: #ffffff;
     border:0px;
     outline: none;
-    padding-left: 2cm;
+    padding-left: 55px;
     
 }
 .ok {
@@ -112,19 +111,22 @@ body {
     top: 0%;
     left: 100%;
     padding: 0;
+    cursor: pointer;
 }
 .sec1_text3 {
     font-family: Asap-Regular;
     font-size: 16pt;
     color: #ffffff;
 }
-
+.upcomer-logo {
+    cursor: pointer;
+}
 
 .sec2 {
     display: flex;
     flex-direction:column;
     align-items:center;
-    padding-top: 2cm;
+    padding-top: 50px;
 }
 .sec2_text1 {
     font-family: Asap-Bold;
@@ -147,21 +149,22 @@ body {
     background-color: #f5f5f5;
     display: flex;
     flex-direction:column;
-    padding-top: 3cm;
+    padding-top: 75px;
 }
 .sec3_part1 {
     display: flex;
     flex-direction:row;
-    justify-content: space-around;
-    padding-bottom: 3cm;
+    justify-content: space-between;
+    padding-bottom: 75px;
+    margin: auto;
+    padding-left: 160px;
 }
 .sec3_part1_pic1 {
-    padding-left: 2cm;
-
+        padding-right: 56px;
 }
 .sec3_part1_right {
     text-align: left;
-    margin-left: 1cm;
+    margin-left: 25px;
 }
 .sec3_part1_right1 {
     font-family: Asap-Bold;
@@ -173,17 +176,18 @@ body {
     font-size: 20pt;
     color: #999999;
     width: 598px
-    
 }
 .sec3_part2 {
     display: flex;
     flex-direction:row;
-    justify-content: space-around;
-    padding-bottom: 3cm;
+    justify-content: space-between;
+    padding-bottom: 75px;
+    margin: auto;
+    padding-left: 40px;
 }
 .sec3_part2_left {
     text-align: right;
-    margin-right: 3cm;
+    margin-right: 75px;
 }
 .sec3_part2_left1 {
      font-family: Asap-Bold;
@@ -197,7 +201,7 @@ body {
     width: 457px;
 }
 .sec3_part2_pic1 {
-    padding-right: 3cm
+    padding-right: 75px
 }
 
 
@@ -208,8 +212,8 @@ body {
     align-items:center;
     text-align: center;
     justify-content: space-around;
-    padding-top: 1cm;
-    padding-bottom: 2cm;
+    padding-top: 25px;
+    padding-bottom: 50px;
 }
 .sec4_text1 {
     font-family: Asap-Bold;
@@ -225,16 +229,18 @@ body {
 .sec4_pics {
     display: flex;
     flex-direction: row;
-    margin-top: 1cm;
+    margin-top: 25px;
 }
 .sec4_pics1 {
-    margin-right: 2cm;
+    margin-right: 50px;
+    cursor: pointer;
 }
 .sec4_pics2 {
-    
+    cursor: pointer;
 }
 .sec4_pics3{
-    margin-left: 2cm;
+    margin-left: 50px;
+    cursor: pointer;
 }
 
 
@@ -242,15 +248,15 @@ body {
     display: flex;
     background-color:#333333;
     flex-direction:row;
-    padding-top: 2cm;
+    padding-top: 50px;
     align-items:center;
 
 }
 .sec5_inner {
     position: relative;
     width: 800px;
-    margin-left: 25%;
-    display: flex;
+    margin: auto;
+    display:flex;
 }
 .sec5_pic1 {
 
@@ -269,13 +275,16 @@ body {
 
 .footer {
     display:flex;
-    background-color: #f5f5f5;
-    height: 60px;
+   
+    height: 50px;
     justify-content: center;
     align-items:center;
 }
+.footer_inner {
+   margin-top: 5px;
+}
 .fb {
-    margin-right:.5cm;
+    margin-right:13px;
 }
 
 
